<resources>
    <string name="app_name">ProductHunt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_subheader">Categories</string>
    <string name="navigation_cat_tech">Tech</string>
    <string name="navigation_cat_games">Games</string>
    <string name="navigation_cat_activity">Activity</string>
    <string name="navigation_cat_collections">Collections</string>
</resources>
